signup issue fix

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -34,7 +34,7 @@
 <div class="popup-form" style="display: block; position: static; margin-left: 0; border: 0;">
 	<div class="row">
 		<form method="POST" action="/oauth/facebook">
-			<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span><br><small style="font-weight: normal;">This is only here for your convenience</small></button>
+			<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span></button>
 		</form>
 		<p class="col-12">- or -</p>
 		<form method="POST" action="/login">
