--- a/app/views/propcott/view.html
+++ b/app/views/propcott/view.html
@@ -182,7 +182,7 @@
 		<div class="row">
 			<form method="POST" action="/oauth/facebook">
 				<input type="hidden" name="join" value="{{ propcott.id }}">
-				<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span><br><small style="font-weight: normal;">This is only here for your convenience</small></button>
+				<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span></button>
 			</form>
 			<p class="col-12">- or -</p>
 			<form method="POST" action="/p/{{ propcott.slug }}/join">
