--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -35,7 +35,7 @@
 <p>Propcott.com aims to provide any discontent indvidual with the platform to start or join a boycotting campaign with unparalleled ease.</p>
 
 <h2>What are Propcotts?</h2>
-<p>Propcotts are the reinventions of boycotts. By grasping the fundamental principle of boycotts, which is to combine and abstain from a given entity, propcotts break down the most important aspects into a few simple sections (Who, What, Why, How) so that users who are seeking to start a propcott can get the campaign off the ground promptly while those considering joining a Propcott can quickly understand what the Propcott is all about.</p>
+<p>Propcotts are the reinventions of boycotts. By grasping the very fundamental principle of boycotts- to combine and abstain from a given entity, propcotts simplify the strenuous process of initiating a boycott by breaking down the essential aspects into a few easy-to-understand sections (Who, What, Why, How). In doing so, individuals who are seeking to start a <s>boycott</s> propcott can get the campaign off the ground within a matter of minutes while those considering joining can quickly understand what the propcott is all about.</p>
 
 <h2>How to Propcott?</h2>
 <ul>
