--- a/app/views/base-new.html
+++ b/app/views/base-new.html
@@ -305,7 +305,7 @@
 	}
 	
 	
-	.alert-info {
+	.alert-info, .alert-error {
 		padding: .5em;
 		font-family: 'Josefin Sans',sans-serif;
 		display: inline-block;
@@ -346,7 +346,7 @@
 		background-color: #397DD8;
 	}
 	.alert-error {
-		background-color: rgb(117,0,0);
+		background-color: #BD1417;
 	}
 	@-webkit-keyframes fadeout {
 	  0%   { height: auto; opacity: 0; margin-top: -30px; }
@@ -391,7 +391,7 @@
 		{% else %}
 		<li class="right">
 			<a href="/account">
-				<span class="typcn typcn-user"></span> Hi, {{ user.display_name }}</span>
+				<span class="typcn typcn-user"></span> Hi, {{ user.display_name || user.username }}</span>
 				<span class="typcn typcn-arrow-sorted-down"></span>
 			</a>
 			<ul>
@@ -442,10 +442,11 @@
 <div id="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-sm-6" style="text-align: left; padding: 0 1em;">
+			<!--div class="col-12 col-sm-6" style="text-align: left; padding: 0 1em;">
 				<h3>We need your help!</h3>
 				<p>Starting something great isn't easy. It takes a lot of work and resources. We're willing to put in the work, but need help with funding the project. If willing, please donate!</p>
-			</div>
+			</div-->
+			<div class="col-12 col-sm-3"></div>
 			<div class="col-6 col-sm-3" style="text-align: left; padding: 0 1em;">
 				<h3>Help &amp; Legal</h3>
 				<ul>
@@ -462,6 +463,7 @@
 					<li><a href="/supporter-tips">Tips for Propcotters</a></li>
 				</ul>
 			</div>
+			<div class="col-12 col-sm-3"></div>
 		</div>
 		<p style="text-align: center;">Copyright &copy; 2015</p>
 	</div>
@@ -541,6 +543,16 @@ button.facebook {
 	color: white;
 	background-color: rgb(0, 119, 255);
 }
+button.facebook:after {
+	font-weight: normal;
+    border-top: 1px solid #FFFFFF;
+    text-transform: uppercase;
+    padding-top: 4px;
+    margin-top: 4px;
+    display: block;
+    content: 'This is only here for your convenience...';
+    font-size: 0.8em;
+}
 button.facebook:hover {
 	color: white;
 	background-color: rgb(0, 100, 200);
@@ -601,7 +613,7 @@ button.facebook:hover {
 <div id="login-box" class="popup-form">
 	<div class="row">
 		<form method="POST" action="/oauth/facebook">
-			<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span><br><small style="font-weight: normal;">This is only here for your convenience</small></button>
+			<button class="col-12 facebook" type="submit">Log in with Facebook<span class="typcn typcn-social-facebook"></span></button>
 		</form>
 		<p class="col-12">- or -</p>
 		<form method="POST" action="/login">
