--- a/app/views/home.html
+++ b/app/views/home.html
@@ -100,12 +100,13 @@
 <div class="headline">
 	<div class="headline-content">
 		<div class="container">
-			<h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);"><span>Boycotts</span><br><span style="font-size: 1.8em;">Made</span><br><span style="font-size: 1.5em;">Simple</span></h1>
+			<h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);margin: 1em 0 2em 0;">Unite. Abstain. <s>Boycott</s> <span style="font-family: cursive;font-style: italic;transform: rotate(-10deg) translate(-4em) translateY(0.6em);width: 0;display: inline-block;">Propcott</span></h1>
+			<!--h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);margin: 1em 0;"><div style="font-size: 1.6em;">Unite</div><div style="font-size: 1.05em;">Abstain</div><div><s>Boycott</s></div><span style="font-family: cursive;font-style: italic;transform: rotate(-10deg) translate(-1em) translateY(0.2em);width: 0;display: inline-block;font-size: 1.25em;">Propcott</span></h1-->
 			
-				<p class="buttons">
-					<a href="/new">Start a Propcott</a>
-					<a href="/about">Learn More</a>
-				</p>
+			<p class="buttons">
+				<a href="/new">Start a Propcott</a>
+				<a href="/about">Learn More</a>
+			</p>
 		</div>
 	</div>
 	
@@ -121,7 +122,17 @@
 <div class="container" style="margin-top: 1em;">
 	<div class="row">
 		<div class="col-12 col-md-7">
-			<div style="padding: 1em;position:relative; background-color: white;text-align:center;overflow:hidden; margin-top: 1em; border-radius: 10px;"><h2 style="position: absolute; top: 0; left: 0; right: 0; background-color: black; margin: 0; color: white; background-color: rgba(0,0,0,0.9); padding: 0.5em;">International Nestle Free Week</h2><p style="position: absolute; font-weight: bold; bottom: 0; left: 0; right: 0; background-color: black; color: white; margin: 0; background-color: rgba(0,0,0,0.95); padding: 0.5em;">From our friends at Baby Milk Action: <a href="https://www.facebook.com/events/1489691241358851/" style="color: white; text-decoration: underline;">International Nestle Free Week</a>. Check them out <a href="http://www.babymilkaction.org/" style="color: white; text-decoration: underline;">here</a> and their Facebook <a href="https://www.facebook.com/nestleboycottINBC" style="color: white; text-decoration: underline;">here</a></p><a href="https://www.facebook.com/events/1489691241358851/"><img src="http://static.propcott.com/images/nestle-free-week-feature.png"></a></div>
+			<div style="margin-bottom: 1em; padding: 1em;position:relative; background-color: white;text-align:center;overflow:hidden; margin-top: 1em; border-radius: 10px;"><h2 style="position: absolute; top: 0; left: 0; right: 0; background-color: black; margin: 0; color: white; background-color: rgba(0,0,0,0.9); padding: 0.5em;">International Nestle Free Week</h2><p style="position: absolute; font-weight: bold; bottom: 0; left: 0; right: 0; background-color: black; color: white; margin: 0; background-color: rgba(0,0,0,0.95); padding: 0.5em;">From our friends at Baby Milk Action: <a href="https://www.facebook.com/events/1489691241358851/" style="color: white; text-decoration: underline;">International Nestle Free Week</a>. Check them out <a href="http://www.babymilkaction.org/" style="color: white; text-decoration: underline;">here</a> and their Facebook <a href="https://www.facebook.com/nestleboycottINBC" style="color: white; text-decoration: underline;">here</a></p><a href="https://www.facebook.com/events/1489691241358851/"><img src="http://static.propcott.com/images/nestle-free-week-feature.png"></a></div>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- Explore Page -->
+			<ins class="adsbygoogle"
+			     style="display:block"
+			     data-ad-client="ca-pub-5509225747243146"
+			     data-ad-slot="1803023116"
+			     data-ad-format="auto"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
 		</div>
 		<div class="col-12 col-md-5" style="vertical-align: top; padding-left: 1em;">
 			<div id="rightbar">
