--- a/app/views/propcott/create.html
+++ b/app/views/propcott/create.html
@@ -227,7 +227,7 @@
 {% block body.end %}
 <script type="text/javascript">
 function chooseVideo() {
-	var video = prompt("Please enter the YouTube video URL");
+	var video = prompt('Please enter the YouTube video URL');
 	if(!video) return;
 
 	var id = (video.match(/^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?]{11}).*/)||[])[7];
@@ -249,7 +249,7 @@ function upload(file) {
 
 	var data = new FormData();
 	data.append('image', file);
-	data.append('_token', '{{ csrf_token }}');
+	//data.append('_token', '{{ csrf_token }}');
 	var xhr = new XMLHttpRequest();
 	xhr.open('POST', '/api/upload');
 	xhr.onload = function() {
